# freestiler

./: .Rbuildignore  .gitignore  CLAUDE.md  DESCRIPTION  NAMESPACE  PYTHON_HANDOFF.md  README.md  _pkgdown.yml  demo_mapgl.R
.github/workflows/: python-package.yml
R/: extendr-wrappers.R  freestile.R  freestiler-package.R  serve.R  view.R
docs/: 404.html  CLAUDE.md  LICENSE-text.html  LICENSE.html  _CLAUDE.html  _PYTHON_HANDOFF.html  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
docs/articles/: getting-started.html  getting-started.md  index.html  index.md  maplibre-tiles.html  maplibre-tiles.md  mapping.html  mapping.md  python.html  python.md
docs/lodes/: index.html
docs/lodes/index_files/mapgl-slider-1.0.0/: slider.js
docs/lodes/index_files/mapgl-slider-css-1.0.0/: slider-control.css
docs/news/: index.html
docs/reference/: freestile.html  freestile.md  freestile_file.html  freestile_file.md  freestile_layer.html  freestile_query.html  freestile_query.md  freestiler-package.html  freestiler-package.md  index.html  index.md  pmtiles_metadata.html  pmtiles_metadata.md  rust_freestile.html  rust_freestile_duckdb.html  rust_freestile_duckdb_query.html  rust_freestile_file.html  rust_pmtiles_metadata.html  rust_pmtiles_metadata.md  serve_tiles.html  serve_tiles.md  stop_server.html  stop_server.md  view_tiles.html  view_tiles.md
man/: freestile.Rd  freestile_file.Rd  freestile_layer.Rd  freestile_query.Rd  freestiler-package.Rd  pmtiles_metadata.Rd  rust_freestile.Rd  rust_freestile_duckdb.Rd  rust_freestile_duckdb_query.Rd  rust_freestile_file.Rd  rust_pmtiles_metadata.Rd  serve_tiles.Rd  stop_server.Rd  view_tiles.Rd
python/: Cargo.toml  README.md  RELEASING.md  pyproject.toml  setup_env.sh
python/conda-recipe/: README.md
python/python/freestiler/: __init__.py  _freestiler.pyi
python/src/: clip.rs  drop.rs  lib.rs  mlt.rs  tiler.rs
python/tests/: test_features.py  test_file_input.py  test_query.py
src/: Makevars.in  Makevars.win.in  entrypoint.c
src/rust/: Cargo.toml
src/rust/freestiler-core/: Cargo.toml
src/rust/freestiler-core/src/: clip.rs  cluster.rs  coalesce.rs  drop.rs  engine.rs  file_input.rs  lib.rs  mlt.rs  mvt.rs  pmtiles_writer.rs  simplify.rs  streaming.rs  tiler.rs
src/rust/src/: clip.rs  lib.rs  mlt.rs  mvt.rs  pmtiles_writer.rs  simplify.rs  tiler.rs
tests/: testthat.R
tests/testthat/: test-clustering.R  test-coalesce.R  test-dropping.R  test-file-input.R  test-mlt.R  test-multilayer.R  test-mvt.R  test-query.R
tools/: build_cran.R  config.R
vignettes/: getting-started.qmd  maplibre-tiles.qmd  mapping.qmd  python.qmd
