[package]
name = "freestiler-python"
version = "0.1.6"
edition = "2021"
description = "PyO3 bindings for the freestiler Rust vector tile engine"
license = "MIT"
homepage = "https://walker-data.com/freestiler/"
documentation = "https://walker-data.com/freestiler/articles/python.html"
repository = "https://github.com/walkerke/freestiler"
publish = false

[lib]
name = "_freestiler"
crate-type = ["cdylib"]

[features]
default = ["geoparquet", "duckdb"]
geoparquet = ["freestiler-core/geoparquet"]
duckdb = ["freestiler-core/duckdb"]
fastpfor = ["freestiler-core/fastpfor"]
fsst = ["freestiler-core/fsst"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
freestiler-core = { path = "../src/rust/freestiler-core" }

# Needed directly for WKB parsing and geometry type conversion
geo-types = "0.7"
geozero = { version = "0.13", features = ["with-wkb", "with-geo"] }

[profile.release]
lto = true
codegen-units = 1
