[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "freestiler"
version = "0.1.4"
description = "Rust-powered MLT/MVT vector tile engine for Python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
license-files = ["LICENSE.md"]
authors = [
    {name = "Kyle Walker", email = "kyle@walker-data.com"},
]
keywords = ["gis", "geospatial", "maplibre", "mvt", "pmtiles", "vector-tiles"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
dependencies = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.0",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://walker-data.com/freestiler/"
Documentation = "https://walker-data.com/freestiler/articles/python.html"
Repository = "https://github.com/walkerke/freestiler"
Issues = "https://github.com/walkerke/freestiler/issues"

[project.optional-dependencies]
test = [
    "pyarrow>=14",
    "pytest>=7.0",
]
dev = [
    "build>=1.2",
    "maturin>=1.7,<2.0",
    "pyarrow>=14",
    "pytest>=7.0",
    "twine>=5.1",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "freestiler._freestiler"

[tool.pytest.ini_options]
testpaths = ["tests"]
